k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      serviceAccountName: app-viewer-sa
      containers:
      - name: frontend
        image: frontend:latest 
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 3000
