k8s/edge-nginx.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: edge-server

spec:
  replicas: 1

  selector:
    matchLabels:
      app: edge-server

  template:
    metadata:
      labels:
        app: edge-server

    spec:
      containers:
      - name: nginx
        image: nginx:1.25-alpine

        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service

metadata:
  name: edge-server-svc

spec:
  type: ClusterIP

  selector:
    app: edge-server

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: edge-server-ingress

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: edge-server-svc
            port:
              number: 80
